discussion/kv_engine/167377/167377_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49858: Add bloom_filter_memory stat

Expose a per-vBucket and per-Bucket stat for the size (in Bytes) of
the ep-engine Bloom filters.

* Per vBucket stat is named 'bloom_filter_memory', available via
  'vbucket-details' stat call.

* Bucket-level stat is named 'vb_bloom_filter_memory' via mcbp stat
  API, or vb_{state}_bloom_filter_memory via Prometheus.

Change-Id: Ifeb60b5f03ad6ee13c6a5ce3385b378bf7b9a551

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-12-13 17:06:29.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-12-13 17:16:44.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35953/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/bloomfilter.cc:162:21:
error: out-of-line definition of "getMemoryFootprint" does not match any declaration in "BloomFilter"; did you mean "getMemoryFootPrint"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35953/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42405/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/vbucket.cc(1236): error C2039: "getMemoryFootprint": is not a member of "BloomFilter" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42405/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14496/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bloomfilter.cc:162:21: error: out-of-line definition of "getMemoryFootprint" does not match any declaration in "BloomFilter"; did you mean "getMemoryFootPrint"? [clang-diagnostic-error]
size_t BloomFilter::getMemoryFootprint() const {
                    ^~~~~~~~~~~~~~~~~~
                    getMemoryFootPrint
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bloomfilter.h:51:12: note: "getMemoryFootPrint" declared here
    size_t getMemoryFootPrint() const;
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:1236:34: error: no member named "getMemoryFootprint" in "BloomFilter"; did you mean "getMemoryFootPrint"? [clang-diagnostic-error]
        memFootprint += bFilter->getMemoryFootprint();
                                 ^~~~~~~~~~~~~~~~~~
                                 getMemoryFootPrint
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bloomfilter.h:51:12: note: "getMemoryFootPrint" declared here
    size_t getMemoryFootPrint() const;
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:1239:37: error: no member named "getMemoryFootprint" in "BloomFilter"; did you mean "getMemoryFootPrint"? [clang-diagnostic-error]
        memFootprint += tempFilter->getMemoryFootprint();
                                    ^~~~~~~~~~~~~~~~~~
                                    getMemoryFootPrint
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bloomfilter.h:51:12: note: "getMemoryFootPrint" declared here
    size_t getMemoryFootPrint() const;
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14496/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bloomfilter.cc:162:21:
error: out-of-line definition of "getMemoryFootprint" does not match any declaration in "BloomFilter"; did you mean "getMemoryFootPrint"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14496/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15297/ : FAILURE

Compile error at [2021-12-13T17:08:49.524Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/src/vbucket.cc:1236:34:
error: no member named "getMemoryFootprint" in "BloomFilter"; did you mean "getMemoryFootPrint"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15297/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4139/ : FAILURE

Compile error at [2021-12-13T17:08:28.511Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/vbucket.cc:1236:34:
error: no member named "getMemoryFootprint" in "BloomFilter"; did you mean "getMemoryFootPrint"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4139/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4197/ : FAILURE

Compile error at [2021-12-13T17:12:32.448Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@10/kv_engine/engines/ep/src/vbucket.cc:1236:34:
error: ?class BloomFilter? has no member named ?getMemoryFootprint?; did you mean ?getMemoryFootPrint??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4197/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16431/ : FAILURE

Compile error at [2021-12-13T17:10:11.124Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/vbucket.cc:1236:34:
error: ?class BloomFilter? has no member named ?getMemoryFootprint?; did you mean ?getMemoryFootPrint??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16431/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16136/ : FAILURE

Compile error at [2021-12-13T17:08:40.838Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/vbucket.cc:1236:34:
error: ?class BloomFilter? has no member named ?getMemoryFootprint?; did you mean ?getMemoryFootPrint??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16136/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24540/ : FAILURE

Compile error at [2021-12-13T17:08:35.347Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master@2/kv_engine/engines/ep/src/vbucket.cc:1236:34:
error: no member named "getMemoryFootprint" in "BloomFilter"; did you mean "getMemoryFootPrint"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24540/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17200/ : FAILURE

Compile error at [2021-12-13T17:07:52.298Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/vbucket.cc:1236:34:
error: no member named "getMemoryFootprint" in "BloomFilter"; did you mean "getMemoryFootPrint"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17200/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13326/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
